# pevm-opt-2

./: BONUS_FEATURES_DESIGN.md  Cargo.toml  README.md  benchmark_medium.json  benchmark_medium_optimized.json  benchmark_small_optimized.json  results.json
pevm-opt-2/: README.md  benchmark_large.json  benchmark_large_optimized.json  benchmark_small.json  optimized_large.json  profile_large.json  results.json  test_block.json  test_large.json  test_medium.json  test_results.json  verify_large.json
pevm-opt-2/src/cli/: mod.rs
pevm-opt-2/src/evm/: context.rs  gas.rs  mod.rs  ops.rs
pevm-opt-2/src/scheduler/: access_oracle.rs  conflict_graph.rs  mis.rs
pevm-opt-2/src/storage/: memory.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/evm/: context.rs  gas.rs  mod.rs  ops.rs
src/generator/: mod.rs
src/log/: logger.rs  mod.rs
src/metrics/: mod.rs
src/scheduler/: access_oracle.rs  conflict_graph.rs  mis.rs  mod.rs  parallel.rs
src/storage/: memory.rs  mod.rs
src/types/: mod.rs
