[package]
name = "pevm-opt-2"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel execution
rayon = "1.10"

# High-performance hashing
ahash = "0.8"

# Cryptographic hashing
blake3 = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Progress indicators
indicatif = "0.17"

# Random number generation
rand = "0.8"

# Optional: Database backends
rocksdb = { version = "0.22", optional = true }
sled = { version = "0.34", optional = true }

# Optional: WASM JIT
wasmtime = { version = "22.0", optional = true }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
db = ["rocksdb", "sled"]
jit = ["wasmtime"]
all = ["db", "jit"]

[[bin]]
name = "pevm-opt-2"
path = "src/main.rs"
